{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 95,
  "lineage": "72b6c37b-a1ff-28d2-4f09-cd97d9ba92c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cd18ef3555fb3b3c",
            "domain": "vpc",
            "id": "eipalloc-091177904c09cc41b",
            "network_interface": "eni-0f299cb11b8caa1e0",
            "private_dns": "ip-10-0-1-250.eu-west-1.compute.internal",
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-34-250-230-207.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.250.230.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4fbfab82b4aee91",
            "arn": "arn:aws:ec2:eu-west-1:993633129639:instance/i-0adc1e6221a42764b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adc1e6221a42764b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057580ec6d6065846",
            "private_dns": "ip-10-0-1-245.eu-west-1.compute.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-34-253-36-104.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.36.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02b9eeff1b439469d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08c6f02ea901605c9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5210224cb4ebd84",
            "tags": {
              "Name": "terraform-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c6f02ea901605c9"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-SG",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02bc4a8199995d70b",
            "owner_id": "993633129639",
            "tags": {
              "Name": "terraform-IGW"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091177904c09cc41b",
            "id": "nat-0f4ea9163b34fc8c7",
            "network_interface_id": "eni-0f299cb11b8caa1e0",
            "private_ip": "10.0.1.250",
            "public_ip": "34.250.230.207",
            "subnet_id": "subnet-0a5210224cb4ebd84",
            "tags": {
              "Name": "NAT-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.terraform-IGW",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b6a4a0e2eaba8a85",
            "owner_id": "993633129639",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bc4a8199995d70b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04d31d37fda05a372",
            "owner_id": "993633129639",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f4ea9163b34fc8c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_nat_gateway.NAT-gateway",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd73c393e6cf8c42",
            "route_table_id": "rtb-04d31d37fda05a372",
            "subnet_id": "subnet-0a6dfbda56d13e4c2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.terraform-IGW",
            "aws_nat_gateway.NAT-gateway",
            "aws_route_table.private-route",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ca2043dd8a445dc",
            "route_table_id": "rtb-04d31d37fda05a372",
            "subnet_id": "subnet-03c8595eb60f6095e"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.terraform-IGW",
            "aws_nat_gateway.NAT-gateway",
            "aws_route_table.private-route",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087c9d90e0ce629c4",
            "route_table_id": "rtb-04d31d37fda05a372",
            "subnet_id": "subnet-0159b94d80bfbe64c"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.terraform-IGW",
            "aws_nat_gateway.NAT-gateway",
            "aws_route_table.private-route",
            "aws_subnet.private-subnet-3",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068964c268ae799c2",
            "route_table_id": "rtb-0b6a4a0e2eaba8a85",
            "subnet_id": "subnet-0a5210224cb4ebd84"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.Public-route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6f3e364de20116",
            "route_table_id": "rtb-0b6a4a0e2eaba8a85",
            "subnet_id": "subnet-0dfb328e09af18574"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.Public-route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-3-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03226b10867d2108c",
            "route_table_id": "rtb-0b6a4a0e2eaba8a85",
            "subnet_id": "subnet-0b003542445e443eb"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.Public-route",
            "aws_subnet.public-subnet-3",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:security-group/sg-08c6f02ea901605c9",
            "description": "This is to allow the ssh access to the instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c6f02ea901605c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow ssh access",
            "name_prefix": null,
            "owner_id": "993633129639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:subnet/subnet-0a6dfbda56d13e4c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a6dfbda56d13e4c2",
            "map_public_ip_on_launch": false,
            "owner_id": "993633129639",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:subnet/subnet-03c8595eb60f6095e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03c8595eb60f6095e",
            "map_public_ip_on_launch": false,
            "owner_id": "993633129639",
            "tags": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:subnet/subnet-0159b94d80bfbe64c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0159b94d80bfbe64c",
            "map_public_ip_on_launch": false,
            "owner_id": "993633129639",
            "tags": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:subnet/subnet-0a5210224cb4ebd84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a5210224cb4ebd84",
            "map_public_ip_on_launch": true,
            "owner_id": "993633129639",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:subnet/subnet-0dfb328e09af18574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0dfb328e09af18574",
            "map_public_ip_on_launch": true,
            "owner_id": "993633129639",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:subnet/subnet-0b003542445e443eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b003542445e443eb",
            "map_public_ip_on_launch": true,
            "owner_id": "993633129639",
            "tags": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-000951278f76d4f83"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:993633129639:vpc/vpc-000951278f76d4f83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0626089fb77f0fed1",
            "default_route_table_id": "rtb-0e90b9d2137fae74a",
            "default_security_group_id": "sg-0f1e5f28ff127f7a8",
            "dhcp_options_id": "dopt-380f285e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-000951278f76d4f83",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e90b9d2137fae74a",
            "owner_id": "993633129639",
            "tags": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}